--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2"
   }
